# ldap-expire-notify

./: .gitignore  LICENSE  Makefile  README.rst  requirements-docs.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
channels/: mail.test.json  webhook.test.yaml
docs/: conf.py  index.rst
ldap_expire_notify/: cli.py  database.py  meta.py  utils.py
ldap_expire_notify/channel/: __init__.py  base.py  email.py  webhook.py
tests/: conftest.py  directory.yaml  test_channel.py  test_channel_base.py  test_channel_email.py  test_channel_webhook.py  test_cli.py  test_database.py  test_utils.py
