[tool:pytest]
python_files=test*.py
addopts=--tb=native -p no:doctest
norecursedirs=bin dist docs	htmlcov script hooks .* {args}
log_level=DEBUG

[flake8]
ignore = F999,E128,E124,E402,W503,E731,F841,F405
max-line-length = 100
exclude = .tox,.git,docs/*

[wheel]
universal = 1

[metadata]
description-file = README.rst
